--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Kolja Grosse</h1>
+							<p>Informatik Student</p>
 						</header>
 						<!--
 						<hr />
